--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "ohmysmtp"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "An OhMySMTP client"
+repository = "https://github.com/sigaloid/ohmysmtp/"
+readme = "README.md"
+keywords = ["smtp", "email", "ohmysmtp"]
+categories = ["api-bindings", "email"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
